# ollama-db-pipeline

./: .env.example  .gitignore  FEATURES.md  INSTRUCTIONS.md  README.md  analyze_html.py  db.py  enrich.py  main.py  migrate_v2.py  pyproject.toml  scraper.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  pipeline_failure.yml  wrong_enrichment.yml
.github/workflows/: update-models.yml
legacy/: export_json.py
pipeline/: flow.py
pipeline/agents/: crawler.py  enricher.py  exporter.py  pr_creator.py  validator.py
pipeline/core/: db.py  models.py  settings.py
pipeline/schemas/: enrichment.py
tests/: test_crawler.py  test_enricher.py  test_validator.py
