[project]
name = "pipeline"
version = "0.1.0"
description = ""
authors = [
    {name = "Serkan USLU",email = "serkanuslu.info@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.15"
dependencies = [
    "crawl4ai (>=0.8.0,<0.9.0)",
    "instructor (>=1.14.5,<2.0.0)",
    "groq (>=1.0.0,<2.0.0)",
    "pydantic (>=2)",
    "sqlmodel (>=0.0.37,<0.0.38)",
    "httpx (>=0.28.1,<0.29.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "prefect (>=3.6.19,<4.0.0)",
    "pydantic-settings (>=2.13.1,<3.0.0)",
    "beautifulsoup4 (>=4.14.3,<5.0.0)"
]

[tool.poetry]
packages = [{include = "pipeline"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "ruff (>=0.15.3,<0.16.0)"
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"

